[tool.poetry]
name = "topography"
version = "0.1.0"
description = ""
authors = ["Aron Ifanger <aronifanger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
shapely = "^2.0.2"
scipy = "^1.11.4"
numpy-stl = "^3.1.1"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
utm = "^0.7.0"
tqdm = "^4.66.1"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
